--- a/src/Services/Backend/Backend.API/Backend.API.csproj
+++ b/src/Services/Backend/Backend.API/Backend.API.csproj
@@ -67,4 +67,7 @@
     <PackageReference Include="System.ServiceModel.Security" Version="4.10.*" />
     <PackageReference Include="System.ServiceModel.Federation" Version="4.10.*" />
   </ItemGroup>
+  <ItemGroup>
+     <RuntimeHostConfigurationOption Include="System.Drawing.EnableUnixSupport" Value="true" />
+  </ItemGroup>
 </Project>
