--- a/src/Services/Backend/Backend.API/Backend.API.csproj
+++ b/src/Services/Backend/Backend.API/Backend.API.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Backend.API</RootNamespace>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Data\**" />
@@ -15,6 +16,9 @@
     <Content Remove="Migrations\**" />
     <Content Remove="Repositories\**" />
     <Content Remove="Services\**" />
+    <Content Include="..\..\..\..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
     <EmbeddedResource Remove="Data\**" />
     <EmbeddedResource Remove="Migrations\**" />
     <EmbeddedResource Remove="Repositories\**" />
